henshin: Re-enable after 1.6.0 release part 2